# rust-intro

./: .gitignore  Cargo.toml  Dockerfile  README.md  book.toml
book/: 404.html  bets_types_as_a_service.rs  chap_1_why_rust.html  chap_2-1_compiler_in_action.html  chap_2-2_the_borrow_checker.html  chap_2_the_language.html  chap_3_rust_examples.html  chap_4-1_tooling.html  chap_4_tooling.html  chap_5_conclusion.html  chapter_1-1_what_is_used_for.html  chapter_1_why_rust.html  chapter_2-1_the_language.html  chapter_2_the_language.html  chapter_3_tooling.html  chapter_4_community.html  chapter_5_good.html  chapter_6_bad.html  chapter_6_ugly.html  chapter_7_cool_things.html  docs.rs  fizz_buzz.rs  functional  functional.rs  hashmaps  hashmaps.rs  http.rs  index.html  integer.rs  just-like-js.rs  libdoc.rlib  main.rs  noclasses.rs  options-results.rs  print.html  references.html  runtime_errors  runtime_errors.rs  searchindex.js  searchindex.json
cool_stuff/deno/: run.sh
cool_stuff/rayon/: Cargo.toml
cool_stuff/rayon/src/: main.rs
cool_stuff/yew/: Cargo.toml
deno/: index.ts
src/: SUMMARY.md  chap_1_why_rust.md  chap_2-1_compiler_in_action.md  chap_2-2_the_borrow_checker.md  chap_2_the_language.md  chap_3_rust_examples.md  chap_4-1_tooling.md  chap_4_tooling.md  chap_5_conclusion.md
yew/: build.sh
