[package]
name = "rust-intro"
version = "0.1.0"
authors = ["Ben Edridge <BenEdridge@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version="0.10" }
actix-rt = "1.0"
reqwest = "0.10.6"
sha2 = "0.9.1"
rayon = "1.3.1"
orion = "0.15.2"

# Use this to specify separate binaries
[[bin]]
name = "http"
path = "./src/http.rs"